# cutlis

./: CMakeLists.txt  README.md  main.c  make.sh  public_test.c
inc/: cutils.h
src/: cutils.c
